--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 locale            : "en-US"
 site_theme        : "default"
-title             : "zzh no more bugs!"
+title             : "Zihan Zhou"
 title_separator   : "-"
 # name            : &name "Your Name"
 # description     : &description "personal description"
@@ -12,17 +12,17 @@ repository        : "https://github.com/zzhnomorebugs/zzhnomorebugs.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "zzh no more bugs!"
-  pronouns         : # example: "she/her"  
+  name             : "Zihan Zhou"
+  pronouns         : "he/him"  
   bio              : "Short biography for the left-hand sidebar"
   location         : "Earth"
-  employer         : "Red Brick University"
-  uri              : # URL
+  employer         : ""
+  # uri              : # URL
   email            : "zihanzhou1@link.cuhk.edu.cn" 
 
   # Academic websites
-  arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  # arxiv            : # URL - Update with the correct link to your profile
+  googlescholar    : "https://scholar.google.com.hk/citations?user=NxB0_NkAAAAJ&hl=zh-CN"
   # impactstory      : # URL
   # orcid            : "http://orcid.org/yourorcidurl"
   # semantic         : # URL
@@ -68,10 +68,10 @@ author:
 publication_category:
   books:
     title: 'Books'
-  manuscripts:
-    title: 'Journal Articles'    
   conferences:
     title: 'Conference Papers'
+  preprint:
+    title: 'Preprint'  
 
 # Site Settings
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
