--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,8 @@ author:
   avatar           : "profile.png"
   name             : "Zihan Zhou"
   pronouns         : "he/him"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
+  bio              : ""
+  location         : "Shenzhen, China"
   employer         : ""
   # uri              : # URL
   email            : "zihanzhou1@link.cuhk.edu.cn" 
