--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ author:
   pronouns         : "he/him"  
   bio              : ""
   location         : "Shenzhen, China"
-  employer         : ""
+  employer         : "The Chinese University of Hong Kong, Shenzhen"
   # uri              : # URL
   email            : "zihanzhou1@link.cuhk.edu.cn" 
 
