--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ locale            : "en-US"
 site_theme        : "default"
 title             : "Zihan Zhou"
 title_separator   : "-"
-# name            : &name "Your Name"
-# description     : &description "personal description"
+name              : "Zihan Zhou"
+description       : "Ph.D. student in Data Science at CUHK-Shenzhen, working on AI4Science, physics-informed machine learning, and diffusion models for scientific computing."
 url               : https://zzhnomorebugs.github.io/
 baseurl           : "" # the subpath of your site, e.g. "/blog"
 repository        : "https://github.com/zzhnomorebugs/zzhnomorebugs.github.io"
@@ -14,7 +14,7 @@ author:
   avatar           : "profile.png"
   name             : "Zihan Zhou"
   pronouns         : "he/him"  
-  bio              : ""
+  bio              : "Ph.D. student in Data Science at CUHK-Shenzhen. Research focuses on AI4Science, particularly physics-informed machine learning and diffusion models for solving physical dynamics."
   location         : "Shenzhen, China"
   employer         : "The Chinese University of Hong Kong, Shenzhen"
   # uri              : # URL
