--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ author:
   pronouns         : "he/him"  
   bio              : "Ph.D. student in Data Science at CUHK-Shenzhen. Research focuses on AI4Science, particularly physics-informed machine learning and diffusion models for solving physical dynamics."
   location         : "Shenzhen, China"
-  employer         : "The Chinese University of Hong Kong, Shenzhen"
+  employer         : "CUHK(SZ)"
   # uri              : # URL
   email            : "zihanzhou1@link.cuhk.edu.cn" 
 
